src/objects/PWORFKey_Contacts__c.object
<CustomObject>
    <description>This stores Key Contacts for PWORF object.</description>
    <fields>
        <fullName>E_mail__c</fullName>
        <description>It displays Email ID of key contacts related to PWORF object.</description>
        <inlineHelpText>Please provide the Email ID of key contacts who can provide further information, if required.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PWORF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please provide Key contact details related to the PWORF.</inlineHelpText>
        <label>PWORF</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipName>PWORF_Key_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>It displays phone number of key contacts related to PWORF object.</description>
        <inlineHelpText>Please provide phone number of key contacts who can provide further information, if required.</inlineHelpText>
        <label>Telephone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Key Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_PWORFKey_Contacts</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_PWORFKey_Contacts</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA VDM Queue</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_PWORFKey_Contacts</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>